# msp430fr2355-quickstart

./: .gitignore  Cargo.toml  Makefile.toml
.cargo/: config
examples/: blinky.rs  capture.rs  clocks.rs  empty.rs  gpio.rs  gpio_trait.rs  override-default-handler.rs  pwm.rs  rtfm.rs  serial.rs  timer-rtfm.rs  timer.rs  timer_hal.rs  uart.rs
src/: clocks.rs  gpio.rs  gpio_trait.rs  lib.rs  serial.rs  timer.rs  watchdog.rs
