[package]
authors = ["Yuhan Lin <linyuhan0315@hotmail.com>"]
name = "msp430fr2355-quickstart"
version = "0.1.0"
edition = "2018"

[dependencies.panic-msp430]
version = "0.1.0"

[dependencies.msp430]
version = "0.1.0"

[dependencies.msp430-rt]
version = "0.1.3"

[dependencies.msp430fr2355]
features = ["rt"]
version = "0.2.1"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 1

[patch.crates-io.msp430-rt]
git = "https://github.com/YuhanLiin/msp430-rt.git"
branch = "remove-panic"
