cargo-features = ["profile-overrides"]

[package]
authors = ["Yuhan Lin <linyuhan0315@hotmail.com>"]
name = "msp430fr2355-quickstart"
version = "0.1.0"
edition = "2018"

[dependencies.panic-msp430]
version = "0.1.0"

[dependencies.msp430]
version = "0.1.0"

[dependencies.msp430-rt]
git = "https://github.com/rust-embedded/msp430-rt"

[dependencies.msp430fr2355]
features = ["rt"]
version = "0.2.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = "s"
debug = true

[profile.dev.overrides."*"]
opt-level = "z"
